Use >=0.1.0 for telegram-bot lib

--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "license": "GPLv3",
   "dependencies": {
     "sqlite3": "^3.0.10",
-    "telegram-bot": "^0.1.0"
+    "telegram-bot": ">=0.1.0"
   }
 }
